<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">Пятница</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="registration_phone_header1">ВВЕДИТЕ СВОЙ\nНОМЕР ТЕЛЕФОНА</string>
    <string name="registration_phone_header2">На этот номер мы пришлем вам\nSMS со специальным кодом.</string>
    <string name="registration_phone_buttonText">ЗАПРОСИТЬ КОД</string>
    <string name="registration_phone_title">Проверка номера</string>
    <string name="registration_sms_header1">ВВЕДИТЕ КОД\nИЗ SMS СООБЩЕНИЯ</string>
    <string name="registration_sms_header2">Он должен прийти на ваш телефон\nв течении пары минут.</string>
    <string name="registration_sms_buttonText">ЗАПРОСИТЬ КОД ПОВТОРНО</string>
    <string name="registration_sms_buttonText_code_entered">ВОЙТИ</string>
    <string name="registration_name_header1">ПОДСКАЖИТЕ НАМ,\nКАК ВАШЕ ИМЯ?</string>
    <string name="registration_name_header2">Оно нужно нам для того, чтобы\nВаш водитель знал как к вам обращаться</string>
    <string name="registration_name_buttonText">ПЕРЕЙТИ К ВВОДУ КОДА</string>
    <string name="left_drawer_menu_item_order_taxi">Заказать такси</string>
    <string name="left_drawer_menu_item_my_places">Мои места</string>
    <string name="left_drawer_menu_item_payments">Кредитные карты</string>
    <string name="left_drawer_menu_item_plans">Тарифы</string>
    <string name="left_drawer_menu_item_about">О нас</string>
    <string name="left_drawer_call_us_btn">СВЯЗАТЬСЯ С НАМИ</string>
    <string name="left_drawer_call_us_alert_title">Позвоните в Такси "Пятница"</string>
    <string name="left_drawer_call_us_alert_body_phone_formatted">+375 (29) 133-75-00</string>
    <string name="left_drawer_call_us_alert_phone_number_no_formatted">+375291337500</string>
    <string name="approximate_cost">Примерная стоимость:</string>
    <string name="status_create_order_button_text">ЗАКАЗАТЬ ТАКСИ</string>
    <string name="rubles_short">р.</string>
    <string name="copeeks_short">коп.</string>
    <string name="status_create_order_from_text">Откуда</string>
    <string name="status_create_order_to_text">Куда</string>
    <string name="status_create_order_comment_hint">Введите комментарий к заказу</string>
    <string name="status_create_order_options_baby_title">Детское\nкресло</string>
    <string name="status_create_order_options_baggage_title">Сопровождение\nдо двери</string>
    <string name="status_create_order_options_animal_title">Сетка для\nживотных</string>
    <string name="status_search_car_button_text">ОТМЕНИТЬ ЗАКАЗ</string>
    <string name="status_car_find_title_text">АВТОМОБИЛЬ НАЙДЕН</string>
    <string name="status_car_find_aprove_btn_text">ПРИНЯТЬ</string>
    <string name="status_car_find_cancel_btn_text">ОТМЕНИТЬ ЗАКАЗ</string>
    <string name="status_car_find_arrive_time">Время прибытия</string>
    <string name="status_car_find_plate">Номер</string>
    <string name="status_car_find_car">Автомобиль</string>
    <string name="status_car_on_way_title">АВТОМОБИЛЬ В ПУТИ К ВАМ</string>
    <string name="status_car_on_way_plate">Номер</string>
    <string name="status_car_on_way_car">Автомобиль</string>
    <string name="status_car_on_way_call_driver_btn">ПОЗВОНИТЬ ВОДИТЕЛЮ</string>
    <string name="status_car_on_way_cancel_order">ОТМЕНИТЬ ЗАКАЗ</string>
    <string name="status_car_on_way_call_driver_dialog_title">Позвонить водителю</string>
    <string name="status_car_on_way_call_driver_dialog_message">Вы действительно хотите позвонить водителю?</string>
    <string name="status_car_on_way_call_driver_dialog_ok">Позвонить</string>
    <string name="status_car_on_way_call_driver_dialog_cancel">Закрыть</string>
    <string name="status_you_on_way_title">ВЫ В ПУТИ</string>
    <string name="status_you_on_way_plate">Номер</string>
    <string name="status_you_on_way_car">Автомобиль</string>
    <string name="status_car_delivered_title">МАШИНА НА МЕСТЕ</string>
    <string name="status_car_delivered_header2">АВТОМОБИЛЬ УЖЕ\nОЖИДАЕТ ВАС</string>
    <string name="status_car_delivered_plate">Номер машины - &#032;</string>
    <string name="status_car_delivered_call_driver_btn">ПОЗВОНИТЬ ВОДИТЕЛЮ</string>
    <string name="status_order_complete_title">ИНФОРМАЦИЯ О ЗАКАЗЕ</string>
    <string name="status_order_complete_header1">ВАШ ЗАКАЗ\nУСПЕШНО ЗАВЕРШЕН</string>
    <string name="status_order_complete_header2">Оцените качество поездки</string>
    <string name="status_order_complete_review_btn">ОЦЕНИТЬ ПОЕЗДКУ</string>
    <string name="status_payment_wait_helpheader">Также, вы можете заплатить водителю наличными</string>
    <string name="status_payment_wait_from">Откуда</string>
    <string name="status_payment_wait_to">Куда</string>
    <string name="status_payment_wait_to_no_place">Не указано</string>
    <string name="status_payment_wait_distance">Расстояние</string>
    <string name="status_payment_wait_pay_with_card_btn">ОПЛАТИТЬ КАРТОЙ</string>
    <string name="status_payment_wait_pay_help_text">Обработка оплаты</string>
    <string name="km_short">км</string>
    <string name="old_currency">BYR</string>
    <string name="new_currency">BYN</string>
    <string name="degree_sign">°</string>
    <string name="degree_minute_sign">\'</string>
    <string name="degree_second_sign">\"</string>
    <string name="minutes">мин</string>
    <string name="status_information_title">ИНФОРМАЦИЯ О ЗАКАЗЕ</string>
    <string name="status_information_no_cars_header">К СОЖАЛЕНИЮ, СЕЙЧАС\nНЕТ СВОБОДНЫХ МАШИН</string>
    <string name="status_information_try_to_repeat_order">Попробуйте продолжить поиск</string>
    <string name="status_information_repeat_order_button_text">НАЧАТЬ НОВЫЙ ПОИСК</string>
    <string name="status_information_timeout_header">ИСТЕКЛО ВРЕМЯ\nПОДТВЕРЖДЕНИЯ ЗАКАЗА</string>
    <string name="history_order_cell_to_point_not_defined">Не указан</string>
    <string name="active_order_cell_status_car_search">Поиск</string>
    <string name="active_order_cell_status_registered">Зарегистрирован</string>
    <string name="active_order_cell_status_car_found">Автомобиль найден</string>
    <string name="active_order_cell_status_car_not_found">Не найдено</string>
    <string name="active_order_cell_status_client_approve_timeout">Не подтвержден</string>
    <string name="active_order_cell_status_client_not_found">Клиент не найден</string>
    <string name="active_order_cell_status_order_postponed">Отложен</string>
    <string name="active_order_cell_status_order_in_progress">Выполняется</string>
    <string name="active_order_cell_status_order_completed">Не оплачен</string>
    <string name="active_order_cell_status_order_paid">Оплачен</string>
    <string name="active_order_cell_status_order_closed">Закрыт</string>
    <string name="active_order_cell_status_order_not_paid">Не оплачен</string>
    <string name="active_order_cell_status_canceled">Отменен</string>
    <string name="active_order_cell_status_order_pending_payment">Ожидание оплаты</string>
    <string name="active_order_cell_status_car_wait">Ожидает</string>
    <string name="right_drawer_active_orders_header">Текущие заказы</string>
    <string name="right_drawer_history_orders_header">Прошлые заказы</string>
    <string name="profile_screen_title">Профиль</string>
    <string name="profile_screen_header">ЛИЧНАЯ ИНФОРМАЦИЯ</string>
    <string name="profile_screen_name_title">Имя</string>
    <string name="profile_screen_family_name_title">Фамилия</string>
    <string name="profile_screen_email_title">Почта</string>
    <string name="profile_screen_phone_title">Номер</string>
    <string name="profile_screen_upload_data">СОХРАНИТЬ ДАННЫЕ</string>
    <string name="profile_screen_fade_hint_text">Сохранение данных</string>
    <string name="profile_screen_logout_title"><u>ВЫЙТИ ИЗ СВОЕГО ПРОФИЛЯ</u></string>
    <string name="profile_screen_upload_pick_image_title">Выбрать</string>
    <string name="status_order_review_send_review_button_title">ОТПРАВИТЬ ОТЗЫВ</string>
    <string name="status_order_review_stars_header">Оценки по критериям</string>
    <string name="status_order_review_comment_header">Комментарий к оценке</string>
    <string name="status_order_review_cleanness">ЧИСТОТА САЛОНА</string>
    <string name="status_order_review_civility">ВЕЖЛИВОСТЬ</string>
    <string name="status_order_review_velocity">СКОРОСТЬ ПОДАЧИ</string>
    <string name="status_order_review_completed_title">ОТЗЫВ ПРИНЯТ</string>
    <string name="status_order_review_completed_header">СПАСИБО ЗА\nОСТАВЛЕННОЕ МНЕНИЕ</string>
    <string name="status_order_review_completed_text">Нам важно что вы думаете о нас</string>
    <string name="back_to_map_btn_title">ВЕРНУТЬСЯ К КАРТЕ</string>
    <string name="about_us_title">МЫ КОМАНДА ДРУЗЕЙ\nИЗ РАЗНЫХ СФЕР БИЗНЕСА</string>
    <string name="about_us_text">Мы получаем удовольствие от того, что делаем, и верим, что это изменит мир к лучшему.\n\nМы часто пользуемся такси и устали от хамства, обмана и дряхлых машин. Хотим ездить с комфортов, брать с собой любимую собаку, использовать Wi-Fi для работы и развлечений и оплачивать поездку картой. Хотим рекомендовать друзьям лучшее такси в городе и быть уверены, что им понравиться. \n\nМы мечтали о современном такси и создали его. Для себя и для вас. \n\nПятница - такси для людей.</string>
    <string name="about_us_review_button_text">ОЦЕНИТЬ ПРИЛОЖЕНИЕ</string>
    <string name="row_plan_data_city_title">В городе</string>
    <string name="row_plan_data_country_title">За городом</string>
    <string name="row_plan_data_idle_title">Час простоя</string>
    <string name="row_plan_data_base_title">Посадка</string>
    <string name="row_plan_data_airport_title">Аэропорт</string>
    <string name="permission_location_rationale_message">Для более удобного и быстрого заказа такси, пожалуйста, разрешите приложению определять ваше местоположение.</string>
    <string name="permission_location_denied_message">Данному приложению запрещено использовать вашу геопозицию.\nДля более удобного и быстрого заказа такси, пожалуйста, разрешите приложению определять ваше местоположение.</string>
    <string name="row_no_active_orders_text">В данный момент\nактивных заказов нет</string>
    <string name="login_name_please_set_your_name_text">Пожалуйста, укажите ваше имя</string>
    <string name="profile_screen_please_set_valid_email">Пожалуйста, проверьте правильность ввода вашего email</string>
    <string name="status_information_cancel_header">ВАШ ЗАКАЗ БЫЛ ОТМЕНЕН</string>
    <string name="status_information_cancel_message">По какой-то причине Ваш заказ был отменен, вы можете заказать такси снова, вернувшись к карте.</string>
    <string name="status_information_client_not_found_header">К СОЖАЛЕНИЮ,\nМАШИНА УЕХАЛА!</string>
    <string name="status_information_client_not_found_message">Водитель Вас не дождался. Для уточнения ситуации свяжитесь с диспетчером по телефону 7500.</string>
    <string name="no_address_string">Адрес не указан</string>
    <string name="payments_screen_title">Оплата</string>
    <string name="payments_screen_header_text">ПОДКЛЮЧИТЕ БАНКОВСКУЮ\nКАРТУ ДЛЯ БЫСТРОЙ ОПЛАТЫ</string>
    <string name="payments_screen_hint_text">Добавьте карточку для возможности оплаты поездки прямо из приложения.</string>
    <string name="payments_screen_add_card_button_title">ДОБАВИТЬ КАРТУ</string>
</resources>