<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/fragment_status_order_complete"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/statusesBackWithAlpha"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_status_order_complete_main_back"
        android:layout_width="match_parent"
        android:layout_height="248dp"

        android:background="@drawable/default_status_back"

        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"

        app:layout_constraintBottom_toBottomOf="@id/fragment_status_order_complete"
        app:layout_constraintLeft_toLeftOf="@id/fragment_status_order_complete"
        app:layout_constraintRight_toRightOf="@id/fragment_status_order_complete">

        <View
            android:id="@+id/fragment_status_order_complete_title_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:background="@color/defaultBackgroundGray"

            android:layout_marginTop="50dp"

            app:layout_constraintTop_toTopOf="@id/fragment_status_order_complete_main_back"
            app:layout_constraintLeft_toLeftOf="@id/fragment_status_order_complete_main_back"
            app:layout_constraintRight_toRightOf="@id/fragment_status_order_complete_main_back"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="@color/defaultBlack"

            android:text="@string/status_order_complete_title"
            />

        <TextView
            android:id="@+id/fragment_status_order_complete_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/defaultBlack"

            android:text="@string/status_order_complete_header1"

            android:layout_marginTop="21dp"

            app:layout_constraintTop_toBottomOf="@id/fragment_status_order_complete_title_separator"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textSize="14sp"
            android:textColor="@color/registrationColorHeader2"

            android:text="@string/status_order_complete_header2"

            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/fragment_status_order_complete_header1"
            />



        <Button
            android:id="@+id/fragment_status_order_complete_aprove_button"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"

            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/round_shape_green_btn"

            app:layout_constraintBottom_toBottomOf="@id/fragment_status_order_complete_main_back"
            app:layout_constraintLeft_toLeftOf="@id/fragment_status_order_complete_main_back"
            app:layout_constraintRight_toRightOf="@id/fragment_status_order_complete_main_back"

            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="@color/defaultWhite"
            android:text="@string/status_order_complete_review_btn"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>