<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:id="@+id/fragment_login_name">


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_login_name_header1"
        android:text="@string/registration_name_header1"
        android:textColor="@color/defaultBlack"
        android:enabled="false"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/fragment_login_name"
        app:layout_constraintCenterX_toCenterX="@+id/fragment_login_name"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_name"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name" />


    <TextView
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_name_header1"
        app:layout_constraintCenterX_toCenterX="@+id/fragment_login_name"
        android:layout_marginTop="25dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_login_name_header2"
        android:text="@string/registration_name_header2"
        android:textColor="@color/registrationColorHeader2"
        android:enabled="false"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_name"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name" />


    <EditText
        android:textColor="@color/defaultBlack"
        android:id="@+id/fragment_login_name_text_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="textCapSentences"
        android:background="@drawable/round_shape_white_bordered_btn"
        android:textSize="16sp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/fragment_login_name_header2"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_name"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name"

        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        />

    <ImageView
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_name"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_name_text_edit"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:id="@+id/fragment_login_name_separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name"
        app:layout_constraintRight_toRightOf="@+id/fragment_login_name"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_name_separator_1"

        android:id="@+id/fragment_login_name_send_code_button"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_shape_blue_btn"

        android:text="@string/registration_name_buttonText"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/fragment_login_name_loading_button_name_view"
        android:layout_width="40dp"
        android:layout_height="35dp"

        app:indicatorName="BallPulseIndicator"

        style="@style/AVLoadingIndicatorView"
        app:indicatorColor="@color/whiteColor"

        android:elevation="3dp"

        app:layout_constraintCenterY_toCenterY="@id/fragment_login_name_send_code_button"
        app:layout_constraintCenterX_toCenterX="@id/fragment_login_name_send_code_button"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/registration_pixels"

        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_login_name"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_login_name"/>

</android.support.constraint.ConstraintLayout>