<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/fragment_status_car_delivered"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/statusesBackWithAlpha"
        android:clickable="true"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_status_car_delivered_main_back"
        android:layout_width="match_parent"
        android:layout_height="431dp"

        android:background="@drawable/default_status_back"

        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"

        app:layout_constraintBottom_toBottomOf="@id/fragment_status_car_delivered"
        app:layout_constraintLeft_toLeftOf="@id/fragment_status_car_delivered"
        app:layout_constraintRight_toRightOf="@id/fragment_status_car_delivered">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="@color/defaultBlack"

            android:text="@string/status_car_delivered_title"
            />


        <ImageView
            android:id="@+id/fragment_status_car_delivered_image_back"
            android:layout_width="match_parent"
            android:layout_height="192dp"

            android:src="@drawable/status_car_delivered_car_image"

            android:layout_marginTop="50dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"


            android:scaleType="centerCrop"

            app:layout_constraintTop_toTopOf="@id/fragment_status_car_delivered_main_back"
            app:layout_constraintLeft_toLeftOf="@id/fragment_status_car_delivered_main_back"
            app:layout_constraintRight_toRightOf="@id/fragment_status_car_delivered_main_back"
            />

        <TextView
            android:id="@+id/fragment_status_car_delivered_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/defaultBlack"
            android:text="@string/status_car_delivered_header2"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"


            app:layout_constraintTop_toBottomOf="@id/fragment_status_car_delivered_image_back"
            app:layout_constraintLeft_toLeftOf="@id/fragment_status_car_delivered_main_back"
            app:layout_constraintRight_toRightOf="@id/fragment_status_car_delivered_main_back"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal"
            android:gravity="center"

            android:layout_marginTop="14dp"

            app:layout_constraintTop_toBottomOf="@id/fragment_status_car_delivered_header_text"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_car_delivered_plate"


                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:textColor="@color/registrationColorHeader2"
                />

            <TextView
                android:id="@+id/fragment_status_car_delivered_plate_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7 TAX 3503"


                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/defaultBlack"
                />
        </LinearLayout>
        
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/round_shape_white_bordered_btn"


            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            android:text="@string/status_car_delivered_call_driver_btn"

            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="@color/defaultBlack"

            app:layout_constraintBottom_toBottomOf="@id/fragment_status_car_delivered_main_back"
            app:layout_constraintLeft_toLeftOf="@id/fragment_status_car_delivered_main_back"
            app:layout_constraintRight_toRightOf="@id/fragment_status_car_delivered_main_back"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>